[gd_scene load_steps=4 format=3 uid="uid://b1e1p1gupvjf5"]

[ext_resource type="Theme" uid="uid://bq5yldw4dqxp6" path="res://resources/themes/menu.tres" id="1_8bu7l"]
[ext_resource type="Script" path="res://scripts/ui/settings_panel.gd" id="1_xk3go"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c0jh"]
bg_color = Color(0.384314, 0.368627, 0.388235, 1)

[node name="SettingsPanel" type="Panel"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -199.0
offset_right = 299.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8bu7l")
script = ExtResource("1_xk3go")
master_bus_name = "Master"
sfx_bus_name = "SFX"
music_bus_name = "Music"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 15.0
offset_top = 15.0
offset_right = 585.0
offset_bottom = 385.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3c0jh")
text = "SOUNDS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSettings" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer/SoundSettings"]
layout_mode = 2
size_flags_horizontal = 0
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/SoundSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SfxLabel" type="Label" parent="VBoxContainer/SoundSettings"]
layout_mode = 2
size_flags_horizontal = 0
text = "SFX
"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SoundSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/SoundSettings"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/SoundSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
